<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_popular"
        android:id="@+id/action_popular"
        android:enabled="true"
        android:title="@string/str_popular"
        app:showAsAction="ifRoom" />

    <item
        android:icon="@drawable/ic_star"
        android:id="@+id/action_top_rated"
        android:enabled="true"
        android:title="@string/str_top_rated"
        app:showAsAction="ifRoom" />

    <item
        android:icon="@drawable/ic_up_coming"
        android:id="@+id/action_upcoming"
        android:enabled="true"
        android:title="@string/str_upcoming"
        app:showAsAction="ifRoom" />

</menu>